# rust-fullstack-docker-k8s

./: .dockerignore  .editorconfig  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
.circleci/: check-cd.sh  gcloud-connect.sh
app/: .eslintignore  .eslintrc  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.ts
app/src/: declarations.d.ts  index.html  index.tsx  lib.js  lib.rs
app/src/components/: Cars.tsx  CarsList.tsx  Nav.tsx  Search.tsx
app/src/containers/: App.tsx
app/src/styles/: GlobalStyle.ts
app/src/utils/: cars.ts  computeAverage.ts
infrastructure/: cluster-issuer.yaml
infrastructure/production/: cluster.yaml  kubernetes.yaml
scripts/: build.sh  deploy-gke.sh
scripts/sql/: data.sql  schema.sql
src/: main.rs
src/car/: mod.rs  model.rs  routes.rs  search.rs
