[package]
name = "rust-fullstack-docker-k8s"
version = "0.1.0"
authors = ["Cameron Manavian <cameron.manavian@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
anyhow = "1.0.28"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.3", features = [ "mysql" ] }
