[package]
name = "rust_fullstack_docker_k8s"
description = "Rust Fullstack Docker K8s"
version = "0.1.0"
authors = ["Cameron Manavian <cameron.manavian@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.4.0"
actix-redis = "0.9"
anyhow = "1.0.28"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
meilisearch-sdk = "0.3.0"
redis-async = "0.6.3"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.3", features = [ "mysql" ] }
